fix: increases visibility of arrange task container.

--- a/src/app/lecture/knowledge-node/learning-objects/arrange-task/arrange-task.component.css
+++ b/src/app/lecture/knowledge-node/learning-objects/arrange-task/arrange-task.component.css
@@ -4,9 +4,9 @@
 
 .list-container {
   border-radius: 4px;
-  border: solid 1px #cccccc;
+  border: solid 2px #bebebe;
   height: 100%;
-  min-height: 72px;
+  min-height: 100px;
   max-height: 300px;
   overflow-y: auto;
 }
